--- a/feature/target_encoding.ipynb
+++ b/feature/target_encoding.ipynb
@@ -2346,39 +2346,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "item_basic_feature = [\n",
+    "    'product_code', 'prod_name',\n",
+    "    'product_type_name', 'product_group_name',\n",
+    "    'graphical_appearance_name', 'colour_group_name',\n",
+    "    'perceived_colour_value_name',\n",
+    "    'perceived_colour_master_name',\n",
+    "    'department_name', 'index_code', 'index_name',\n",
+    "    'index_group_name', 'section_no', 'section_name',\n",
+    "    'garment_group_name',\n",
+    "]\n",
     "item_numerical_feature_names = [\n",
-    "        'mean_item_price', 'std_item_price', 'max_item_price',\n",
-    "        'min_item_price', 'median_item_price', 'sum_item_price',\n",
-    "        'max_minus_min_item_price', 'max_minus_mean_item_price',\n",
-    "        'mean_minus_min_item_price', 'count_item_price',\n",
-    "        'mean_item_price_under_point', 'mean_item_price_over_point',\n",
-    "        'max_item_price_under_point', 'max_item_price_over_point',\n",
-    "        'min_item_price_under_point', 'min_item_price_over_point',\n",
-    "        'median_item_price_under_point', 'median_item_price_over_point',\n",
-    "        'sum_item_price_under_point', 'sum_item_price_over_point',\n",
-    "        'item_mean_offline_or_online', 'item_median_offline_or_online',\n",
-    "        'item_sum_offline_or_online'\n",
-    "        ]\n",
+    "    'mean_item_price', 'std_item_price', 'max_item_price',\n",
+    "    'min_item_price', 'median_item_price', 'sum_item_price',\n",
+    "    'max_minus_min_item_price', 'max_minus_mean_item_price',\n",
+    "    'mean_minus_min_item_price', 'count_item_price',\n",
+    "    'mean_item_price_under_point', 'mean_item_price_over_point',\n",
+    "    'max_item_price_under_point', 'max_item_price_over_point',\n",
+    "    'min_item_price_under_point', 'min_item_price_over_point',\n",
+    "    'median_item_price_under_point', 'median_item_price_over_point',\n",
+    "    'sum_item_price_under_point', 'sum_item_price_over_point',\n",
+    "    'item_mean_offline_or_online', 'item_median_offline_or_online',\n",
+    "    'item_sum_offline_or_online'\n",
+    "]\n",
     "user_numerical_feature_names = [\n",
-    "        'mean_transaction_price',\n",
-    "        'std_transaction_price', 'max_transaction_price',\n",
-    "        'min_transaction_price', 'median_transaction_price',\n",
-    "        'sum_transaction_price', 'max_minus_min_transaction_price',\n",
-    "        'max_minus_mean_transaction_price', 'mean_minus_min_transaction_price',\n",
-    "        'count_transaction_price', 'mean_transaction_price_under_point',\n",
-    "        'mean_transaction_price_over_point',\n",
-    "        'max_transaction_price_under_point', 'max_transaction_price_over_point',\n",
-    "        'min_transaction_price_under_point', 'min_transaction_price_over_point',\n",
-    "        'median_transaction_price_under_point',\n",
-    "        'median_transaction_price_over_point',\n",
-    "        'sum_transaction_price_under_point', 'sum_transaction_price_over_point',\n",
-    "        'mean_sales_channel_id', 'median_sales_channel_id',\n",
-    "        'sum_sales_channel_id'\n",
-    "    ]\n",
+    "    'mean_transaction_price',\n",
+    "    'std_transaction_price', 'max_transaction_price',\n",
+    "    'min_transaction_price', 'median_transaction_price',\n",
+    "    'sum_transaction_price', 'max_minus_min_transaction_price',\n",
+    "    'max_minus_mean_transaction_price', 'mean_minus_min_transaction_price',\n",
+    "    'count_transaction_price', 'mean_transaction_price_under_point',\n",
+    "    'mean_transaction_price_over_point',\n",
+    "    'max_transaction_price_under_point', 'max_transaction_price_over_point',\n",
+    "    'min_transaction_price_under_point', 'min_transaction_price_over_point',\n",
+    "    'median_transaction_price_under_point',\n",
+    "    'median_transaction_price_over_point',\n",
+    "    'sum_transaction_price_under_point', 'sum_transaction_price_over_point',\n",
+    "    'mean_sales_channel_id', 'median_sales_channel_id',\n",
+    "    'sum_sales_channel_id'\n",
+    "]\n",
     "\n",
     "item_features = item_features[['article_id'] + item_numerical_feature_names]\n",
-    "user_features = user_features[['customer_id_short'] + user_numerical_feature_names]\n",
-    "\n"
+    "user_features = user_features[[\n",
+    "    'customer_id_short'] + user_numerical_feature_names]\n"
    ]
   },
   {
