--- a/models/RuleBase確認.ipynb
+++ b/models/RuleBase確認.ipynb
@@ -280,8 +280,7 @@
    "source": [
     "\n",
     "# t_datの週内最終日をlast_day_of_bought_weekとして取得.\n",
-    "tmp['ldbw'] = tmp['t_dat'] - \\\n",
-    "    pd.TimedeltaIndex(data=tmp['dow'] - 1, unit='D')\n",
+    "tmp['ldbw'] = tmp['t_dat'] - pd.TimedeltaIndex(data=tmp['dow'] - 1, unit='D')\n",
     "tmp.head()\n",
     "tmp['ldbw2'] = tmp['t_dat'].progress_apply(\n",
     "            # datetime型.floor():切り下げ（今回は7days毎）\n",
@@ -291,34 +290,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 3710.05it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 4277.81it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1000   2018-09-20\n",
-       "1001   2018-09-20\n",
-       "1002   2018-09-20\n",
-       "1003   2018-09-20\n",
-       "1004   2018-09-20\n",
-       "          ...    \n",
-       "1995   2018-09-20\n",
-       "1996   2018-09-20\n",
-       "1997   2018-09-20\n",
-       "1998   2018-09-20\n",
-       "1999   2018-09-20\n",
-       "Name: t_dat, Length: 1000, dtype: datetime64[ns]"
+       "1000   728 days\n",
+       "1001   728 days\n",
+       "1002   728 days\n",
+       "1003   728 days\n",
+       "1004   728 days\n",
+       "         ...   \n",
+       "1995   728 days\n",
+       "1996   728 days\n",
+       "1997   728 days\n",
+       "1998   728 days\n",
+       "1999   728 days\n",
+       "Name: t_dat, Length: 1000, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,8 +325,8 @@
    "source": [
     "tmp['t_dat'].iloc[1000:2000].progress_apply(\n",
     "            # datetime型.floor():切り下げ（今回は7days毎）\n",
-    "            lambda d: last_ts - (last_ts - d).floor('7D')\n",
-    "            # lambda d: d.floor('7D')\n",
+    "            # lambda d: last_ts - (last_ts - d).floor('7D')\n",
+    "            lambda d: (last_ts - d).floor('7D')\n",
     "        )"
    ]
   },
