--- a/models/RuleBase確認.ipynb
+++ b/models/RuleBase確認.ipynb
@@ -242,6 +242,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 最終日は何曜日？？=>1=火曜日\n",
+    "last_ts.day_of_week\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -287,6 +309,9 @@
     "\n",
     "# t_datの週内最終日をlast_day_of_bought_weekとして取得.\n",
     "tmp['ldbw'] = tmp['t_dat'] - pd.TimedeltaIndex(data=tmp['dow'] - 1, unit='D')\n",
+    "# (もしt_datが火曜日の場合は、ldbw=t_dat)\n",
+    "# (もしt_datが月曜日の場合は、ldbw=t_dat-(-1)=t_dat+1=火曜日)\n",
+    "\n",
     "tmp.head()\n",
     "tmp['ldbw2'] = tmp['t_dat'].progress_apply(\n",
     "            # datetime型.floor():切り下げ（今回は7days毎）\n",
@@ -479,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +531,7 @@
        "      <th>t_dat</th>\n",
        "      <th>dow</th>\n",
        "      <th>ldbw</th>\n",
+       "      <th>ldbw2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -514,45 +540,50 @@
        "      <td>2018-09-20</td>\n",
        "      <td>3</td>\n",
        "      <td>2018-09-25</td>\n",
+       "      <td>2018-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2018-09-20</td>\n",
        "      <td>3</td>\n",
        "      <td>2018-09-25</td>\n",
+       "      <td>2018-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2018-09-20</td>\n",
        "      <td>3</td>\n",
        "      <td>2018-09-25</td>\n",
+       "      <td>2018-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2018-09-20</td>\n",
        "      <td>3</td>\n",
        "      <td>2018-09-25</td>\n",
+       "      <td>2018-09-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2018-09-20</td>\n",
        "      <td>3</td>\n",
        "      <td>2018-09-25</td>\n",
+       "      <td>2018-09-20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       t_dat  dow       ldbw\n",
-       "0 2018-09-20    3 2018-09-25\n",
-       "1 2018-09-20    3 2018-09-25\n",
-       "2 2018-09-20    3 2018-09-25\n",
-       "3 2018-09-20    3 2018-09-25\n",
-       "4 2018-09-20    3 2018-09-25"
+       "       t_dat  dow       ldbw      ldbw2\n",
+       "0 2018-09-20    3 2018-09-25 2018-09-20\n",
+       "1 2018-09-20    3 2018-09-25 2018-09-20\n",
+       "2 2018-09-20    3 2018-09-25 2018-09-20\n",
+       "3 2018-09-20    3 2018-09-25 2018-09-20\n",
+       "4 2018-09-20    3 2018-09-25 2018-09-20"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,6 +595,71 @@
     "    pd.TimedeltaIndex(\n",
     "        np.ones(len(tmp.loc[tmp['dow'] >= 2])) * 7, unit='D')\n",
     "tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2018-10-02\n",
+       "1         2018-10-02\n",
+       "2         2018-10-02\n",
+       "3         2018-10-02\n",
+       "4         2018-10-02\n",
+       "             ...    \n",
+       "1581697   2020-09-29\n",
+       "1581698   2020-09-29\n",
+       "1581699   2020-09-29\n",
+       "1581700   2020-09-29\n",
+       "1581701   2020-09-29\n",
+       "Length: 1171315, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.loc[tmp['dow'] >= 2, 'ldbw'] + \\\n",
+    "    pd.TimedeltaIndex(\n",
+    "        np.ones(len(tmp.loc[tmp['dow'] >= 2])) * 7, unit='D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2018-10-02\n",
+       "1         2018-10-02\n",
+       "2         2018-10-02\n",
+       "3         2018-10-02\n",
+       "4         2018-10-02\n",
+       "             ...    \n",
+       "1581697   2020-09-29\n",
+       "1581698   2020-09-29\n",
+       "1581699   2020-09-29\n",
+       "1581700   2020-09-29\n",
+       "1581701   2020-09-29\n",
+       "Name: ldbw, Length: 1171315, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.loc[tmp['dow'] >= 2, 'ldbw'] + datetime.timedelta(days=7)\n",
+    "# tmp.loc[tmp['dow'] >= 2]"
    ]
   },
   {
