--- a/models/RuleBase確認.ipynb
+++ b/models/RuleBase確認.ipynb
@@ -666,7 +666,7 @@
     }
    ],
    "source": [
-    "item_feature_origin = pd.read_parquet(r'C:\\Users\\Masat\\デスクトップ_Instead\\webアプリ開発\\H_and_M_Personalized_Fashion_Recommendations\\input\\item_features.parquet')\n",
+    "item_feature_origin = pd.read_parquet(r'C:\\Users\\Masat\\デスクトップ_Instead\\webアプリ開発\\H_and_M_Personalized_Fashion_Recommendations\\input\\item_features_my_fullT.parquet')\n",
     "item_feature_my = pd.read_csv(r'C:\\Users\\Masat\\デスクトップ_Instead\\webアプリ開発\\H_and_M_Personalized_Fashion_Recommendations\\input\\item_features_my_fullT.csv')\n",
     "\n",
     "\n",
@@ -676,22 +676,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28\n",
-      "24\n"
+      "Index(['product_type_name', 'product_group_name', 'graphical_appearance_name',\n",
+      "       'colour_group_name', 'perceived_colour_value_name',\n",
+      "       'perceived_colour_master_name', 'department_name', 'index_name',\n",
+      "       'index_group_name', 'section_name', 'garment_group_name', 'count',\n",
+      "       'sum_price', 'mean_price', 'min_price', 'max_price', 'prod_name_3',\n",
+      "       'product_type_name_3', 'product_group_name_3',\n",
+      "       'graphical_appearance_name_3', 'colour_group_name_3',\n",
+      "       'perceived_colour_value_name_3', 'perceived_colour_master_name_3',\n",
+      "       'department_name_3', 'index_name_3', 'index_group_name_3',\n",
+      "       'section_name_3', 'garment_group_name_3'],\n",
+      "      dtype='object')\n",
+      "Index(['article_id', 'mean_item_price', 'std_item_price', 'max_item_price',\n",
+      "       'min_item_price', 'median_item_price', 'sum_item_price',\n",
+      "       'max_minus_min_item_price', 'max_minus_mean_item_price',\n",
+      "       'mean_minus_min_item_price', 'count_item_price',\n",
+      "       'mean_item_price_under_point', 'mean_item_price_over_point',\n",
+      "       'max_item_price_under_point', 'max_item_price_over_point',\n",
+      "       'min_item_price_under_point', 'min_item_price_over_point',\n",
+      "       'median_item_price_under_point', 'median_item_price_over_point',\n",
+      "       'sum_item_price_under_point', 'sum_item_price_over_point',\n",
+      "       'item_mean_offline_or_online', 'item_median_offline_or_online',\n",
+      "       'item_sum_offline_or_online'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "# print(item_feature_origin.nunique())\n",
-    "print(item_feature_origin.shape[1])\n",
-    "print(item_feature_my.shape[1])\n"
+    "print(item_feature_origin.columns)\n",
+    "print(item_feature_my.columns)\n"
    ]
   },
   {
