--- a/models/RuleBase確認.ipynb
+++ b/models/RuleBase確認.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -180,16 +180,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>product_code</th>\n",
+       "      <th>prod_name</th>\n",
+       "      <th>product_type_no</th>\n",
        "      <th>product_type_name</th>\n",
        "      <th>product_group_name</th>\n",
+       "      <th>graphical_appearance_no</th>\n",
        "      <th>graphical_appearance_name</th>\n",
+       "      <th>colour_group_code</th>\n",
        "      <th>colour_group_name</th>\n",
-       "      <th>perceived_colour_value_name</th>\n",
-       "      <th>perceived_colour_master_name</th>\n",
-       "      <th>department_name</th>\n",
-       "      <th>index_name</th>\n",
-       "      <th>index_group_name</th>\n",
-       "      <th>section_name</th>\n",
        "      <th>...</th>\n",
        "      <th>product_group_name_3</th>\n",
        "      <th>graphical_appearance_name_3</th>\n",
@@ -202,223 +202,184 @@
        "      <th>section_name_3</th>\n",
        "      <th>garment_group_name_3</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>article_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>108775015</th>\n",
+       "      <th>0</th>\n",
+       "      <td>108775015</td>\n",
+       "      <td>108775</td>\n",
+       "      <td>12855</td>\n",
+       "      <td>253</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
+       "      <td>1010016</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108775044</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108775051</th>\n",
+       "      <th>1</th>\n",
+       "      <td>108775044</td>\n",
+       "      <td>108775</td>\n",
+       "      <td>12855</td>\n",
+       "      <td>253</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
+       "      <td>1010016</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>108775051</td>\n",
+       "      <td>108775</td>\n",
+       "      <td>44846</td>\n",
+       "      <td>253</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1010017</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>110065001</td>\n",
+       "      <td>110065</td>\n",
+       "      <td>8159</td>\n",
+       "      <td>306</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1010016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110065002</td>\n",
+       "      <td>110065</td>\n",
+       "      <td>8159</td>\n",
+       "      <td>306</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1010016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110065001</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110065002</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>5 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            product_type_name  product_group_name  graphical_appearance_name  \\\n",
-       "article_id                                                                     \n",
-       "108775015                   0                   0                          0   \n",
-       "108775044                   0                   0                          0   \n",
-       "108775051                   0                   0                          1   \n",
-       "110065001                   1                   1                          0   \n",
-       "110065002                   1                   1                          0   \n",
+       "   article_id  product_code  prod_name  product_type_no  product_type_name  \\\n",
+       "0   108775015        108775      12855              253                  9   \n",
+       "1   108775044        108775      12855              253                  9   \n",
+       "2   108775051        108775      44846              253                  9   \n",
+       "3   110065001        110065       8159              306                 13   \n",
+       "4   110065002        110065       8159              306                 13   \n",
        "\n",
-       "            colour_group_name  perceived_colour_value_name  \\\n",
-       "article_id                                                   \n",
-       "108775015                   0                            0   \n",
-       "108775044                   1                            1   \n",
-       "108775051                   2                            2   \n",
-       "110065001                   0                            0   \n",
-       "110065002                   1                            1   \n",
+       "   product_group_name  graphical_appearance_no  graphical_appearance_name  \\\n",
+       "0                   0                  1010016                          0   \n",
+       "1                   0                  1010016                          0   \n",
+       "2                   0                  1010017                          3   \n",
+       "3                   4                  1010016                          0   \n",
+       "4                   4                  1010016                          0   \n",
        "\n",
-       "            perceived_colour_master_name  department_name  index_name  \\\n",
-       "article_id                                                              \n",
-       "108775015                              0                0           0   \n",
-       "108775044                              1                0           0   \n",
-       "108775051                              1                0           0   \n",
-       "110065001                              0                1           1   \n",
-       "110065002                              1                1           1   \n",
+       "   colour_group_code  colour_group_name  ...  product_group_name_3  \\\n",
+       "0                  9                  0  ...                   1.0   \n",
+       "1                 10                  2  ...                   1.0   \n",
+       "2                 11                 11  ...                   1.0   \n",
+       "3                  9                  0  ...                   0.0   \n",
+       "4                 10                  2  ...                   0.0   \n",
        "\n",
-       "            index_group_name  section_name  ...  product_group_name_3  \\\n",
-       "article_id                                  ...                         \n",
-       "108775015                  0             0  ...                     1   \n",
-       "108775044                  0             0  ...                     1   \n",
-       "108775051                  0             0  ...                     1   \n",
-       "110065001                  0             1  ...                     0   \n",
-       "110065002                  0             1  ...                     0   \n",
+       "   graphical_appearance_name_3  colour_group_name_3  \\\n",
+       "0                          1.0                  1.0   \n",
+       "1                          1.0                  1.0   \n",
+       "2                          0.0                  0.0   \n",
+       "3                          1.0                  1.0   \n",
+       "4                          1.0                  1.0   \n",
        "\n",
-       "            graphical_appearance_name_3  colour_group_name_3  \\\n",
-       "article_id                                                     \n",
-       "108775015                             1                    1   \n",
-       "108775044                             1                    1   \n",
-       "108775051                             0                    0   \n",
-       "110065001                             1                    1   \n",
-       "110065002                             1                    1   \n",
+       "   perceived_colour_value_name_3  perceived_colour_master_name_3  \\\n",
+       "0                            1.0                             1.0   \n",
+       "1                            1.0                             1.0   \n",
+       "2                            1.0                             1.0   \n",
+       "3                            1.0                             1.0   \n",
+       "4                            1.0                             1.0   \n",
        "\n",
-       "            perceived_colour_value_name_3  perceived_colour_master_name_3  \\\n",
-       "article_id                                                                  \n",
-       "108775015                               1                               1   \n",
-       "108775044                               1                               1   \n",
-       "108775051                               1                               1   \n",
-       "110065001                               1                               1   \n",
-       "110065002                               1                               1   \n",
+       "   department_name_3  index_name_3  index_group_name_3  section_name_3  \\\n",
+       "0                0.0           1.0                 1.0             0.0   \n",
+       "1                0.0           1.0                 1.0             0.0   \n",
+       "2                0.0           1.0                 1.0             0.0   \n",
+       "3                0.0           0.0                 1.0             0.0   \n",
+       "4                0.0           0.0                 1.0             0.0   \n",
        "\n",
-       "            department_name_3  index_name_3  index_group_name_3  \\\n",
-       "article_id                                                        \n",
-       "108775015                   0             1                   1   \n",
-       "108775044                   0             1                   1   \n",
-       "108775051                   0             1                   1   \n",
-       "110065001                   0             0                   1   \n",
-       "110065002                   0             0                   1   \n",
+       "   garment_group_name_3  \n",
+       "0                   1.0  \n",
+       "1                   1.0  \n",
+       "2                   1.0  \n",
+       "3                   0.0  \n",
+       "4                   0.0  \n",
        "\n",
-       "            section_name_3  garment_group_name_3  \n",
-       "article_id                                        \n",
-       "108775015                0                     1  \n",
-       "108775044                0                     1  \n",
-       "108775051                0                     1  \n",
-       "110065001                0                     0  \n",
-       "110065002                0                     0  \n",
-       "\n",
-       "[5 rows x 28 columns]"
+       "[5 rows x 60 columns]"
       ]
      },
      "metadata": {},
